--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+golang (2:1.4.3-3sci8u2) scibian8; urgency=medium
+
+  * debian: skip tests during build
+
+ -- Thomas Hamel <thomas-externe.hamel@edf.fr>  Thu, 14 Dec 2017 17:59:33 +0100
+
 golang (2:1.4.3-3sci8u1) scibian8; urgency=medium
 
   * Scibian8 rebuild.
