scibian9 Release 1.11.6-1sci9u1

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+golang-1.11 (1.11.6-1sci9u1) scibian9; urgency=medium
+
+  * New Upstream version.
+
+ -- MHamed Bouaziz <mhamed-externe.bouaziz@edf.fr>  Fri, 26 Apr 2019 16:49:20 +0200
+
 golang-1.11 (1.11.6-1) unstable; urgency=medium
 
   * New upstream version 1.11.6, fixing CVE-2019-9741. (Closes: #924630)
