--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+golang-1.11 (1.11.6-1sci9u2) scibian9; urgency=medium
+
+  * Debhelper version changes 
+
+ -- MHamed Bouaziz <mhamed-externe.bouaziz@edf.fr>  Mon, 29 Apr 2019 13:55:43 +0200
+
 golang-1.11 (1.11.6-1sci9u1) scibian9; urgency=medium
 
   * New Upstream version.
